--- a/dublin_bus/dbus/templates/dbus/index.html
+++ b/dublin_bus/dbus/templates/dbus/index.html
@@ -595,10 +595,10 @@ var pos;
         function getInputDate(){
           if ($('#checkbox').is(':checked')){
             console.log('actual datetime')
-            return c;
+            return [c, true];
           } else {
             console.log('input datetime')
-            return new Date($('#datetime').val());
+            return [new Date($('#datetime').val()), false];
           }
         }
 
@@ -727,19 +727,23 @@ var pos;
           route = $("#routes option:selected").text();
           start_stop = $('#start option:selected').text().split(',')[0];
           end_stop = $('#end option:selected').text().split(',')[0];
-          date = getInputDate()
+          date = getInputDate()[0];
           year = date.getFullYear();
           month = date.getMonth() + 1;
           day = date.getDate();
           hour = date.getHours();
-          console.log("Route =", route)
-          console.log("Start Stop =", start_stop)
-          console.log("End Stop =", end_stop)
-          console.log("Day =", day)
-          console.log("Hour =", hour)
+          minute = date.getMinutes();
+          now = getInputDate()[1];
+          console.log("Route =", route);
+          console.log("Start Stop =", start_stop);
+          console.log("End Stop =", end_stop);
+          console.log("Day =", day);
+          console.log("Hour =", hour);
+          console.log("Minute =", minute);
+          console.log("Now =", now);
           $.get('/predict_request/', {route: route, start_stop: start_stop, 
             end_stop: end_stop, year: year, month: month, day: day, 
-            hour: hour}, function(data){
+            hour: hour, minute: minute, now: now}, function(data){
               
               if (typeof data == 'string') {
                 console.log('error')
@@ -748,9 +752,7 @@ var pos;
                 console.log('not error')
                 var leap = getLeap(data['price']);
                 var results = "";
-                if ($('#checkbox').is(':checked')) {
-                  results = 'Wait time: ' + data['wait'] + '<br>';
-                }
+                results = 'Wait time: ' + data['wait'] + '<br>';
                 results += 'Travel time: ' + data['prediction'] + '<br>Price: ' + data['price'] +  leap;
                 console.log(data['prediction'], data['price'])
                 $('#results > p').html(results);
@@ -860,7 +862,7 @@ var pos;
           console.log(output)
           context = JSON.stringify(output)		
           
-          date = getInputDate();
+          date = getInputDate()[0];
           year = date.getFullYear();
           month = date.getMonth() + 1;
           day = date.getDate();
