--- a/dublin_bus/dbus/static/dbus/index.css
+++ b/dublin_bus/dbus/static/dbus/index.css
@@ -193,3 +193,17 @@ h4 {
     height: 30px;
     text-align: left;
 }
+
+#info {
+
+    float: left;
+    margin-top: 10px;
+    margin-left: 10px;
+
+}
+
+#panel {
+
+    margin-top: 10px;
+
+}
