fixed issue where route wasn't being deleted if user requested leap stores

--- a/dublin_bus/dbus/templates/dbus/index.html
+++ b/dublin_bus/dbus/templates/dbus/index.html
@@ -715,6 +715,7 @@ var pos;
 			geoLocation()
 	                map.setCenter(pos);
 			removeMarkers()
+			directionsDisplay.setMap(null);
 
 			output = []
           		output.push(pos)          
